Clean secrets and add finance updates