@@ -18,7 +18,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import tn.esprit.pi_back.security.JwtAuthFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -36,17 +35,35 @@ public class SecurityConfig {
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/auth/**", "/uploads/**", "/users/**").permitAll()
+
+                        .requestMatchers("/auth/**", "/api/auth/**").permitAll()
+                        .requestMatchers("/uploads/**").permitAll()
+
+                        .requestMatchers(HttpMethod.GET, "/profils-credit/me", "/api/profils-credit/me").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/profils-credit/me", "/api/profils-credit/me").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/profils-credit/me", "/api/profils-credit/me").authenticated()
+                        .requestMatchers("/profils-credit/by-client", "/api/profils-credit/by-client").authenticated()
+                        .requestMatchers("/evaluations/**", "/api/evaluations/**").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/demandes", "/api/demandes").authenticated()
+                        .requestMatchers("/decisions/**", "/credits/**").authenticated()
+
+                        .requestMatchers("/users/me", "/users/me-full").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/users/me").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/users/clients", "/users/partners", "/users/partners/type/**").authenticated()
+                        .requestMatchers("/api/projects/**").hasAnyRole("ADMIN", "PARTNER")
+
                         .requestMatchers("/insurance/**", "/vouchers/**", "/partnership/**", "/score-risque/**", "/notifications/**").permitAll()
                         .requestMatchers("/contrats/**", "/claims/**", "/assureurs/**", "/offres/**").permitAll()
                         .requestMatchers("/products/**", "/categories/**", "/cart/**").permitAll()
+                        .requestMatchers("/api/products/**", "/api/categories/**", "/api/cart/**").permitAll()
                         .requestMatchers("/partner-products/**").permitAll()
                         .requestMatchers("/profils-credit/**", "/sms/**").permitAll()
-                        // On demande l'authentification pour les demandes et décisions
+                        .requestMatchers("/modalites/**").permitAll()
+
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-        
+
         return http.build();
     }
 
@@ -54,12 +71,12 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
